# beebcrunch

./: .gitmodules  CMakeLists.txt
corpus/: README.md  basic2.rom.inf  blurp.bin.inf  blurpscreen.bin.inf  boomscreen.bin.inf  chuckie.bin.inf  corpus.ssd  droid-title.bin.inf  exile-title.bin.inf  exileb.bin.inf  frak2.bin.inf  ravenskull-title.bin.inf  repton3-title.bin.inf
docs/: results.md
src/: CMakeLists.txt  bitreader.c  bitreader.h  bitutils.h  bitwriter.c  bitwriter.h  coding.c  coding.h  frontier.c  frontier.h  main.c  matches.c  matches.h  tables.c  tables.h  v0.c  v0.h  v1.c  v1.h  v2.c  v2.h  v3.c  v3.h  v4.c  v4.h  v5.c  v5.h  v6.c  v6.h  v7.c  v7.h
